[package]
name = "rd"
version = "0.1.0-dev"
edition = "2021"
authors = ["The Dlz Open Developers"]
license = "MIT OR Apache-2.0"
default-run = "rd"

[workspace]
resolver = "2"
members = [
    ".",
    "crates/rd_map/",
]

[workspace.package]
edition = "2021"
version = "0.1.0-dev"
authors = ["The Dlz Open Developers"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
bevy_fluent = "0.4.0"
rd_map = { path = "crates/rd_map" }

[workspace.dependencies.bevy]
version = "0.8"
default-features = false
features = [
    "x11",
    "png",
    "filesystem_watcher",
    "bevy_gilrs"
]

[workspace.dependencies.bevy_ecs_tilemap]
version = "0.7.0"
features = [
    "atlas",
]

[dependencies]
bevy.workspace = true
rd_map.workspace = true